V8Simple.h

/// using System;
/// using System.Runtime.InteropServices;
/// using System.Text;
/// namespace Fuse.Scripting.V8.Simple
/// {
/// // -------------------------------------------------------------------------
/// // Types
/// public enum JSType
/// {
/// 	Null,
/// 	Int,
/// 	Double,
/// 	String,
/// 	Bool,
/// 	Object,
/// 	Array,
/// 	Function,
/// 	External,
/// }
enum class JSType
{
	Null,
	Int,
	Double,
	String,
	Bool,
	Object,
	Array,
	Function,
	External,
};
/// public enum JSRuntimeError
/// {
/// 	NoError,
/// 	InvalidCast,
/// 	StringTooLong,
/// 	TypeError,
/// }
enum class JSRuntimeError
{
	NoError,
	InvalidCast,
	StringTooLong,
	TypeError,
};
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSContext
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSContext;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSValue
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSValue;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSString
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSString;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSObject
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSObject;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSArray
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSArray;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSFunction
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSFunction;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSExternal
/// {
/// 	readonly IntPtr _handle;
/// }
struct JSExternal;
/// [StructLayout(LayoutKind.Sequential)]
/// public struct JSScriptException
/// {
/// 	readonly IntPtr _handle;
/// 	public override bool Equals(object that) { return that is JSScriptException ? this == (JSScriptException)that : false; }
/// 	public override int GetHashCode() { return _handle.GetHashCode(); }
/// 	public static bool operator ==(JSScriptException e1, JSScriptException e2) { return e1._handle == e2._handle; }
/// 	public static bool operator !=(JSScriptException e1, JSScriptException e2) { return e1._handle != e2._handle; }
/// }
struct JSScriptException;
/// public delegate JSValue JSCallback(JSContext context, IntPtr data, [In, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 3)]JSValue[] args, int numArgs, out JSValue error);
typedef JSValue* (StdCall *JSCallback)(JSContext* context, void* data, JSValue* const* args, int numArgs, JSValue** outError);
/// public delegate void JSExternalFinalizer(IntPtr external);
typedef void (StdCall *JSExternalFinalizer)(void* external);
/// public delegate void JSCallbackFinalizer(IntPtr data);
typedef void (StdCall *JSCallbackFinalizer)(void* data);
/// public delegate void JSDebugMessageHandler(IntPtr data, JSString message);
typedef void (StdCall *JSDebugMessageHandler)(void* data, JSString* message);
/// // -------------------------------------------------------------------------
/// // Context
/// public static class Context
/// {
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="RetainJSContext")]
/// public static extern void Retain(JSContext context);
DllPublic void CDecl RetainJSContext(JSContext* context);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="ReleaseJSContext")]
/// public static extern void Release(JSContext context);
DllPublic void CDecl ReleaseJSContext(JSContext* context);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="CreateJSContext")]
/// public static extern JSContext Create([MarshalAs(UnmanagedType.FunctionPtr)]JSCallbackFinalizer callbackFinalizer, [MarshalAs(UnmanagedType.FunctionPtr)]JSExternalFinalizer externalFinalizer);
DllPublic JSContext* CDecl CreateJSContext(JSCallbackFinalizer callbackFinalizer, JSExternalFinalizer externalFinalizer);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="JSContextEvaluateCreate")]
/// public static extern JSValue EvaluateCreate(JSContext context, JSString fileName, JSString code, out JSScriptException error);
DllPublic JSValue* CDecl JSContextEvaluateCreate(JSContext* context, JSString* fileName, JSString* code, JSScriptException** outError);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="JSContextCopyGlobalObject")]
/// public static extern JSObject CopyGlobalObject(JSContext context);
DllPublic JSObject* CDecl JSContextCopyGlobalObject(JSContext* context);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="GetV8Version")]
/// public static extern IntPtr GetV8VersionPtr();
/// public static string GetV8Version() { return Marshal.PtrToStringAnsi(GetV8VersionPtr()); }
DllPublic const char* CDecl GetV8Version();
/// }

/// // -------------------------------------------------------------------------
/// // Debug
/// public static class Debug
/// {
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="SetJSDebugMessageHandler")]
/// public static extern void SetMessageHandler(JSContext context, IntPtr data, [MarshalAs(UnmanagedType.FunctionPtr)]JSDebugMessageHandler messageHandler);
DllPublic void CDecl SetJSDebugMessageHandler(JSContext* context, void* data, JSDebugMessageHandler messageHandler);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="SendJSDebugCommand")]
/// public static extern void SendCommand(JSContext context, [MarshalAs(UnmanagedType.LPWStr, SizeParamIndex = 2)]string command, int length);
DllPublic void CDecl SendJSDebugCommand(JSContext* context, const uint16_t* command, int length);
/// [DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="ProcessJSDebugMessages")]
/// public static extern void ProcessMessages(JSContext context);
DllPublic void CDecl ProcessJSDebugMessages(JSContext* context);