V8Simple.cs

using System;
using System.Runtime.InteropServices;
using System.Text;
namespace Fuse.Scripting.V8.Simple
{
// -------------------------------------------------------------------------
// Types
public enum JSType
{
	Null,
	Int,
	Double,
	String,
	Bool,
	Object,
	Array,
	Function,
	External,
}
public enum JSRuntimeError
{
	NoError,
	InvalidCast,
	StringTooLong,
	TypeError,
}
[StructLayout(LayoutKind.Sequential)]
public struct JSContext
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSValue
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSString
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSObject
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSArray
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSFunction
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSExternal
{
	readonly IntPtr _handle;
}
[StructLayout(LayoutKind.Sequential)]
public struct JSScriptException
{
	readonly IntPtr _handle;
	public override bool Equals(object that) { return that is JSScriptException ? this == (JSScriptException)that : false; }
	public override int GetHashCode() { return _handle.GetHashCode(); }
	public static bool operator ==(JSScriptException e1, JSScriptException e2) { return e1._handle == e2._handle; }
	public static bool operator !=(JSScriptException e1, JSScriptException e2) { return e1._handle != e2._handle; }
}
public delegate JSValue JSCallback(JSContext context, IntPtr data, [In, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 3)]JSValue[] args, int numArgs, out JSValue error);
public delegate void JSExternalFinalizer(IntPtr external);
public delegate void JSCallbackFinalizer(IntPtr data);
public delegate void JSDebugMessageHandler(IntPtr data, JSString message);
// -------------------------------------------------------------------------
// Context
public static class Context
{
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="RetainJSContext")]
public static extern void Retain(JSContext context);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="ReleaseJSContext")]
public static extern void Release(JSContext context);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="CreateJSContext")]
public static extern JSContext Create([MarshalAs(UnmanagedType.FunctionPtr)]JSCallbackFinalizer callbackFinalizer, [MarshalAs(UnmanagedType.FunctionPtr)]JSExternalFinalizer externalFinalizer);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="JSContextEvaluateCreate")]
public static extern JSValue EvaluateCreate(JSContext context, JSString fileName, JSString code, out JSScriptException error);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="JSContextCopyGlobalObject")]
public static extern JSObject CopyGlobalObject(JSContext context);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="GetV8Version")]
public static extern IntPtr GetV8VersionPtr();
public static string GetV8Version() { return Marshal.PtrToStringAnsi(GetV8VersionPtr()); }
}
// -------------------------------------------------------------------------
// Debug
public static class Debug
{
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="SetJSDebugMessageHandler")]
public static extern void SetMessageHandler(JSContext context, IntPtr data, [MarshalAs(UnmanagedType.FunctionPtr)]JSDebugMessageHandler messageHandler);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="SendJSDebugCommand")]
public static extern void SendCommand(JSContext context, [MarshalAs(UnmanagedType.LPWStr, SizeParamIndex = 2)]string command, int length);
[DllImport("V8Simple.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint="ProcessJSDebugMessages")]
public static extern void ProcessMessages(JSContext context);
}
